--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -103,3 +103,12 @@
 .no-right-padding{
   padding-right: 0;
 }
+
+.table tr td{
+  a.main-link {
+    color: #428bca;
+  }
+  a.main-link:hover{
+    background: none;
+  }
+}
