add tenants controller for update plans

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -104,6 +104,11 @@
   padding-right: 0;
 }
 
+.no-side-padding{
+  padding-left: 0;
+  padding-right: 0;
+}
+
 .table tr td{
   a.main-link {
     color: #428bca;
