--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -23,6 +23,8 @@
 <%= link_to '< Back to organization Home ', root_path, class: 'btn btn-default'  %>
 <%= link_to t('.edit', default: t("helpers.links.edit")),
               edit_tenant_project_path(@project.tenant_id, @project), class: 'btn btn-default' %>
+<%= link_to "Edit Project Users", users_tenant_project_path(@project.tenant_id, @project),
+              class: "btn btn-default" %>
 <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
               tenant_project_path(@project.tenant_id, @project),
               method: 'delete',
